# flaccid

./: .coverage  .env.template  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.MD  DEVLOG.md  FLACCID_Development_Session_Summary.md  IMPLEMENTATION_STATUS.md  LATEST_IMPROVEMENTS.md  Makefile  QOBUZ_API_ENHANCEMENTS.md  README.md  ROADMAP.md  SECURITY.md  STATUS_AND_IMPROVEMENTS.md  TODO.md  USAGE.md  build.env  buildpack.yaml  cloudbuild.yaml  create_cli.py  deploy.sh  dev-requirements.txt  fix_code_issues.sh  fix_flaccid_patch.diff  fix_pyproject.sh  fix_python_path.sh  fix_script.sh  fla  fla.py  flac-init.py  git_commands.sh  justlife  mypy.ini  new.sh  (+12 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _random.data.json  _random.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  _struct.data.json  _struct.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  (+158 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.11/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/attr/: __init__.data.json  __init__.meta.json  _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  exceptions.meta.json  filters.data.json  filters.meta.json  setters.data.json  setters.meta.json  validators.data.json  validators.meta.json
.mypy_cache/3.11/attrs/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.11/concurrent/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/core/: __init__.data.json  __init__.meta.json  classification.data.json  classification.meta.json  execution.data.json  execution.meta.json  reporting.data.json  reporting.meta.json  verify.data.json  verify.meta.json
.mypy_cache/3.11/ctypes/: __init__.data.json  __init__.meta.json  _endian.data.json  _endian.meta.json  wintypes.data.json  wintypes.meta.json
.mypy_cache/3.11/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.11/fla/: __init__.data.json  __init__.meta.json  __main__.data.json  __main__.meta.json
.mypy_cache/3.11/flaccid/: __init__.data.json  __init__.meta.json  (+4 more)
archive/docs_legacy/: CHANGELOG.md  DEVELOPMENT_LOG.md  FLACCID CLI Toolkit Scaffold and Code Generation.md  IMPLEMENTATION_STATUS.md  README.md  USAGE.md  project_status.md
archive/legacy_tests/: requirements.txt
archive/other/: .env.buildpacks  .env.template
archive/scripts/: bootstrap.sh  bootstrap_flaccid.sh  init_flaccid.sh  install_deps.sh
core/: __init__.py  classification.py  execution.py  reporting.py  verify.py
docs/: 20250712_Implemented.md  DEVELOPMENT_LOG.md  FLACCID CLI Toolkit Developer Handbook.md  FLACCID CLI Toolkit Scaffold and Code Generation.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TASKS.md  Implementation_Guide_CloudShell.md  PHASE2_PLAN.md  PROJECT_STATUS.md  README.md  STATUS_AND_IMPROVEMENTS.md  development-log.md  plugin-development.md  scripts.md  shared-apis.md  user-guide.md
docs/architecture/: README.md
fla/: __init__.py  __main__.py
lib/: __init__.py  index.py  scan.py
scripts/: README.md  create_cli.py  create_missing_modules.py  fix_pyproject_toml.sh  ggggg.py  git_commands.sh  install_laccid_modules.py  install_uploaded_modules.py
set/: __init__.py  auth.py  path.py
shared/: acoustid_api.py  discogs_api.py  musicbrainz_api.py  utils.py
src/: fla.py  legacy_fla.py
src/fla/: __init__.py  __main__.py
src/flaccid/: __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt
tag/: acoustid.py  apple.py  beatport.py  discogs.py  musicbrainz.py  qobuz.py  spotify.py
tests/: __init__.py  conftest.py  test_apple_cli.py  test_classification.py  test_cli.py  test_execution.py  test_reporting.py  test_shared_apis.py  test_simple.py  test_verify.py
tests/fixtures/: Pixies - (1988) Surfer Rosa (2007 Remaster) - 07. Where Is My Mind?.flac  lyrics_ovh.json  tidal_track.json
tests/integration/: test_merge_metadata.py  test_pipeline.py  test_workflow.py
tests/test_helpers/: network.py  snapshot.py
tests/unit/: __init__.py  test_apple_plugin.py  test_cascade.py  test_check_cli.py  test_cli_main.py  test_config_loader.py  test_core_import.py  test_fla_async_shared.py  test_get_command.py  test_get_download.py  test_lib_command.py  test_library.py  test_offline_http.py  test_phase2_missing.py  test_placeholders.py  test_plugin_registry.py  test_plugins.py  test_plugins_cli.py  test_review_tui.py  test_set_cli.py  test_set_command.py  test_shared_apis.py  test_simple.py  test_tag_audit.py  test_tag_cli.py  test_tag_command.py  test_tag_providers.py
(+724 files in other folders)
