



[tool.poetry]
name = "flaccid"
version = "0.1.0"
description = "Modular FLAC CLI Toolkit"
authors = ["georges <geoooorges@icloud.com>"]
readme = "README.md"
packages = [
  { include = "flaccid", from = "src" },
]





[tool.poetry.dependencies]
python = ">=3.11"
typer = ">=0.12.3,<0.13"
pydantic = ">=2.6,<3.0"
dynaconf = ">=3.2,<4.0"
aiohttp = ">=3.9,<4.0"
keyring = ">=25.2,<26.0"
mutagen = ">=1.47,<2.0"
rich = ">=13.6,<14.0"
sqlalchemy = ">=2.0,<3.0"
watchdog = ">=4.0,<5.0"
python-dotenv = ">=1.0,<2.0"
click = ">=8.1.7,<9.0"
google-cloud-storage = "==2.14.0"
gcsfs = "==2023.10.0"
pandas = "==2.1.4"
pyarrow = "==14.0.2"
typing-extensions = "*"
black = ">=25.1.0,<26.0"




[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.21"
flake8 = "^7.3.0"
pre-commit = "^3.7.0"
pytest-cov = "^6.2.1"
types-PyYAML = "^6.0.12.20250516"
mypy = "^1.16.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
explicit_package_bases = true