[tool.poetry]
name = "flaccid"
version = "0.1.0"
description = "A CLI toolkit for downloading and tagging FLAC files"
authors = ["FLACCID Team <info@flaccid.example.com>"]
readme = "README.md"
license = "GPL-3.0-only"
packages = [
  { include = "flaccid", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = ">=0.12.3,<0.13"
pydantic = ">=2.6,<3.0"
dynaconf = ">=3.2,<4.0"
aiohttp = ">=3.9,<4.0"
keyring = ">=25.2,<26.0"
mutagen = ">=1.47,<2.0"
rich = ">=13.6,<14.0"
sqlalchemy = ">=2.0,<3.0"
watchdog = ">=4.0,<5.0"
python-dotenv = ">=1.0,<2.0"
click = ">=8.1.7,<9.0"
google-cloud-storage = "==2.14.0"
gcsfs = "==2023.10.0"
pandas = "==2.1.4"
pyarrow = ">=14.0.2,<15.0"
typing-extensions = ">=4.0.0,<5.0"
just = "^0.8.165"
isort = "^6.0.1"
shell = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0"
pytest = ">=8.4.1,<9.0"
pytest-asyncio = ">=0.21,<0.22"
flake8 = ">=7.3.0"
pre-commit = ">=3.7.0"
pytest-cov = ">=6.2.1"
types-PyYAML = ">=6.0.12"
aioresponses = ">=0.7.8"
mypy = ">=1.16.1"
autoflake = ">=2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-fail-under=85"

[tool.poetry.scripts]
fla = "flaccid.cli.__init__:main"
